sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:16: error: not found: value i
      if (getValeur(i)>getValeur(i+1)) {
                    ^AlgCocktailSort2:16: error: not found: value i
      if (getValeur(i)>getValeur(i+1)) {
                                 ^AlgCocktailSort2:17: error: not found: value i
        echange(i,i+1)
                ^AlgCocktailSort2:17: error: not found: value i
        echange(i,i+1)
                  ^